crates/analyzer/tests/snapshots/errors__duplicate_var_in_child_scope.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: a variable with the same name already exists in this scope
  ┌─ compile_errors/duplicate_var_in_child_scope.fe:6:17
  │
6 │             let sum: u256 = 0
  │                 ^^^ Conflicting definition of `sum` variables
  │
  = Note: Give one of the `sum` variables a different name


